--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,10 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url",
-    "NEXT_PUBLIC_APP_URL": "@next_public_app_url",
-    "MONGODB_URI": "@mongodb_uri",
-    "LOCATIONIQ_API_KEY": "@locationiq_api_key"
+    "NEXT_PUBLIC_API_URL": "${NEXT_PUBLIC_API_URL}",
+    "NEXT_PUBLIC_APP_URL": "${NEXT_PUBLIC_APP_URL}",
+    "MONGODB_URI": "${MONGODB_URI}",
+    "LOCATIONIQ_API_KEY": "${LOCATIONIQ_API_KEY}"
   },
   "headers": [
     {
